--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@ d3.select('svg')
 .append('circle')
 .attr('cx',function(d){return x(d.AverageCityMPG);})
 .attr('cy',function(d){return y(d.AverageHighwayMPG);})
+.attr('r',1)
+.transition().delay(1000)
 .attr('r',function(d){return d.EngineCylinders - 2 + 4;});
 
 
