--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </svg>
 <script>
 async function init() {
-var data = await d3.csv('https://flunky.github.io/cars2017.csv');
+var data = await d3.csv('cars2017.csv');
 var x = d3.scaleLog().domain([10,150]).range([0,200]);
 var y = d3.scaleLog().domain([10,150]).range([200,0]);
 
