--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <script src='https://d3js.org/d3.v5.min.js'></script>
-<style> circle {fill: pink; stroke: black;} </style>
+<style> circle {fill: green; stroke: black;} </style>
 <body onload='init()'>
 <svg width=300 height=300>
 </svg>
