--- a/index.html
+++ b/index.html
@@ -5,18 +5,6 @@
 
 circle {fill: lightgrey; stroke: black;} 
 
-div.tooltip {   
-  position: absolute;           
-  text-align: center;           
-  width: 60px;                  
-  height: 28px;                 
-  padding: 2px;             
-  font: 12px sans-serif;        
-  background: lightsteelblue;   
-  border: 0px;      
-  border-radius: 8px;           
-  pointer-events: none;         
-}
 
 </style>
 
@@ -46,10 +34,12 @@ d3.select('body')
 .attr('height', 500);
 
 //set up tooltip
-var div = d3.select("body")
-.append("div")	
-.attr("class", "tooltip")				
-.style("opacity", 0);
+var tooltip = d3.select("body")
+  .append("div")
+  .style("position", "absolute")
+  .style("z-index", "10")
+  .style("visibility", "hidden")
+  .text("a simple tooltip");
 
 d3.select('svg')
 .append('g')
@@ -61,21 +51,14 @@ d3.select('svg')
 .attr('cx',function(d){return x(d.AverageCityMPG);})
 .attr('cy',function(d){return y(d.AverageHighwayMPG);})
 .attr('r',function(d){return d.EngineCylinders - 2 + 4;})
-.on('mouseover', function(d)
-{
-	div.tranistion()
-	.duration(500)
-	.style("opacity", .9);
-	div.html(d.Make)
-	 .style("left", (d3.event.pageX) + "px")		
-     .style("top", (d3.event.pageY - 28) + "px");	
-})
-.on("mouseout", function(d) {		
-             div.transition()		
-                .duration(500)		
-                .style("opacity", 0);	
-        });
+.on("mouseover", function(d){
+  return tooltip.style("visibility", "visible")
+                 .style("left", (d3.event.pageX) + "px")    
+                 .style("top", (d3.event.pageY - 28) + "px")
+                 .html("Hwy: "+ d.AverageHighwayMPG +"<br/>" + "City:" + d.AverageCityMPG)
 
+})
+  .on("mouseout", function(d){return tooltip.style("visibility", "hidden");});
 
 d3.select('svg')
 .append('g')
