--- a/index Scene1.html
+++ b/index Scene1.html
@@ -19,9 +19,7 @@ async function init() {
 var data = await d3.csv('https://flunky.github.io/cars2017.csv');
 var x = d3.scaleLog().domain([10,150]).range([0,400]);
 var y = d3.scaleLog().domain([10,150]).range([400,0]);
-var lscale = d3.scaleLinear().domain([0,12]).range([0,90]);
 
-//heading
 d3.select('body')
 .append('h2')
 .text("Fuel Efficiency - All Car Types")
@@ -29,7 +27,7 @@ d3.select('body')
 .style('font-family','Courier')
 .style('color', 'steelgrey');
 
-//set up SVG
+
 d3.select('body')
 .append('svg')
 .attr('width', 1200)
@@ -44,13 +42,6 @@ var tooltip = d3.select("body")
   .style("visibility", "hidden")
   .text("a simple tooltip");
 
-
-//set up color scheme
-var cSpec = function(d){return d.Fuel;};
-var color = d3.scaleOrdinal(d3.schemeCategory10);
-  
-
-//scatterplot
 d3.select('svg')
 .append('g')
 .attr('transform','translate(400,50)')
@@ -61,39 +52,26 @@ d3.select('svg')
 .attr('cx',function(d){return x(d.AverageCityMPG);})
 .attr('cy',function(d){return y(d.AverageHighwayMPG);})
 .attr('r',function(d){return d.EngineCylinders - 2 + 7;})
-.style('fill',function(d){return color(cSpec(d))})
 .on("mouseover", function(d){
-  (tooltip.style("visibility", "visible")
+  return tooltip.style("visibility", "visible")
                  .style("left", (d3.event.pageX) + "px")    
                  .style("top", (d3.event.pageY - 28) + "px")
-                 .style("opacity", .5)
+                 .style("opacity", .7)
                  .html("Hwy: "+ d.AverageHighwayMPG +"<br/>" + "City:" + d.AverageCityMPG)
 
-                 )
-d3.select(this).attr('r',function(d){return d.EngineCylinders - 2 + 13;})
-
-
 })
+  .on("mouseout", function(d){return tooltip.style("visibility", "hidden");});
 
-  .on("mouseout", function(d){
-    tooltip.style("visibility", "hidden");
-d3.select(this).attr('r',function(d){return d.EngineCylinders - 2 + 7;})
-}
-);
-
-//add axis
 d3.select('svg')
 .append('g')
 .attr('transform','translate(400,50)')
 .call(d3.axisLeft(y).tickValues([10,20,50,100]).tickFormat(d3.format(".0s")));
 
+
 d3.select('svg')
 .append('g')
 .attr('transform','translate(400,450)')
 .call(d3.axisBottom(x).tickValues([10,20,50,100]).tickFormat(d3.format(".0s")));
-
-
-
 
 //add x axis lables
 d3.select('svg')
@@ -109,59 +87,6 @@ d3.select('svg')
 .attr('transform', 'translate(350,250)rotate(-90)')
 .style('text-anchor','middle')
 .text('Miles per Gallon - Highway');
-
-// draw legend
-  var legend = d3.select('svg')
-       .selectAll(".legend")
-      .data(color.domain())
-    .enter().append("g")
-      .attr("class", "legend")
-      .attr("transform", function(d, i) { return "translate(0," + i * 20 + ")"; });
-// draw legend colored rectangles
-  legend.append("circle")
-      .attr("cx", 1000)
-      .attr('cy',370)
-      .attr('r', 7)
-      .style("fill", color);
-   // draw legend text
-  legend.append("text")
-      .attr("x", 985)
-      .attr("y", 370)
-      .attr("dy", ".35em")
-      .style("text-anchor", "end")
-      .text(function(d) { return d;})
-
-
-  //add scale and circles for cylinder size
-d3.select('svg')
-.append('g')
-.attr('transform','translate(910,290)')
-.call(d3.axisBottom(lscale).tickValues([0,12]).tickFormat(d3.format(".0s")));
-
-d3.select('svg')
-.append('circle')
-.attr('cx',910)
-.attr('cy',278)
-.attr('r',5)
-.style('fill','grey');
-
-d3.select('svg')
-.append('circle')
-.attr('cx',1000)
-.attr('cy',273)
-.attr('r',10)
-.style('fill','grey');
-
-//add lable
-d3.select('svg')
-.append('text')
-.attr('x', 960)
-.attr('y', 320)
-.style('text-anchor','middle')
-.text('Engine Cylinders');
-
-
-
 
 }
 </script>
