--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ var svg = d3.select('body')
 var tooltip = d3.select("body")
   .append("div")
   .style("position", "absolute")
-  .style('background','white')
+  .style('background','lightgrey')
   .style("z-index", "10")
   .style("visibility", "hidden")
 
